# ccc-server-next

./: .clippy.toml  .env.sample  .gitignore  Cargo.toml  Containerfile  README.md  SECURITY.md  renovate.json5
.config/mise/: config.toml
.github/workflows/: build.yml
ccc-bonapp/: Cargo.toml
ccc-bonapp/bindings/: BonAppCafesResponse.ts  BonAppSingleCafeResponse.ts
ccc-bonapp/src/: lib.rs  types.rs
ccc-bonapp/src/bonapp-examples/: 1711902469--cafe-261--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjYxCg==.json  1711902470--cafe-262--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjYyCg==.json  1711902470--cafe-263--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjYzCg==.json  1711902470--cafe-35--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MzUK.json  1711902471--cafe-24--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjQK.json  1711902471--cafe-36--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MzYK.json  1711902472--cafe-458--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9NDU4Cg==.json  1711902689--cafe-261--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjYxCg==.json  1711902689--cafe-262--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjYyCg==.json  1711902690--cafe-263--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjYzCg==.json  1711902690--cafe-35--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MzUK.json  1711902690--cafe-36--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MzYK.json  1711902691--cafe-24--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9MjQK.json  1711902691--cafe-458--LW4gaHR0cHM6Ly9sZWdhY3kuY2FmZWJvbmFwcGV0aXQuY29tL2FwaS8yL2NhZmVzP2NhZmU9NDU4Cg==.json
ccc-bonapp/src/types/: cafe.rs
ccc-handlers/: Cargo.toml
ccc-handlers/src/: bonapp.rs  github.rs  lib.rs  news.rs  reports.rs  streams.rs
ccc-proxy/: Cargo.toml
ccc-proxy/src/: lib.rs
ccc-routes/: Cargo.toml
ccc-routes/src/: contacts.rs  dictionary.rs  faqs.rs  food.rs  lib.rs  news.rs  printing.rs  reports.rs  spaces.rs  streams.rs  tools.rs  transit.rs  webcams.rs
ccc-server/: Cargo.toml
ccc-server-routes/: Cargo.toml
ccc-server-routes/src/: contacts.rs  dictionary.rs  faqs.rs  food.rs  lib.rs  news.rs  printing.rs  reports.rs  spaces.rs  streams.rs  tools.rs  transit.rs  webcams.rs
ccc-server/src/: main.rs  rt.rs
ccc-types/: Cargo.toml
ccc-types/bindings/: index.d.ts  package.json
ccc-types/src/: contacts.rs  food.rs  lib.rs  news.rs  reports.rs  spaces.rs  streams.rs  tools.rs  transit.rs  webcams.rs
ccc-types/tests/: combine_types.rs
ccc-upstream-handlers/: Cargo.toml
ccc-upstream-handlers/src/: bonapp.rs  github.rs  news.rs  reports.rs  streams.rs
ccc-upstream-proxy/: Cargo.toml
ccc-worker/: Cargo.toml
ccc-worker/src/: lib.rs
e2e/: CARLETON_ROUTES  CCC_ROUTES  Cargo.toml  STOLAF_ROUTES
e2e/src/: main.rs
handlers/: Cargo.toml
handlers/src/: bonapp.rs  client.rs  github.rs  lib.rs
routes/: Cargo.toml
routes/src/: contacts.rs  dictionary.rs  faqs.rs  food.rs  lib.rs  printing.rs  spaces.rs  tools.rs  transit.rs  webcams.rs
script/: capture-examples.sh
src/: main.rs  routes.rs
src/routes/: contacts.rs  dictionary.rs  faqs.rs  food.rs  printing.rs  spaces.rs  tools.rs  transit.rs  webcams.rs
types/: Cargo.toml
types/bindings/: index.d.ts  package.json
types/src/: contacts.rs  dictionary.rs  faqs.rs  food.rs  lib.rs  printing.rs  spaces.rs  tools.rs  transit.rs  webcams.rs
types/src/food/: pause.rs
types/tests/: combine_types.rs
