[workspace]
resolver = "2"
members = [
	"ccc-server",
	"ccc-handlers",
	"ccc-proxy",
	"ccc-routes",
	"ccc-types",
	"e2e",
]

[workspace.dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
bytes = "1.5.0"
ccc-handlers = { path = "./ccc-handlers" }
ccc-proxy = { path = "./ccc-proxy" }
ccc-routes = { path = "./ccc-routes" }
ccc-types = { path = "./ccc-types" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
http = "1.1.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
similar = "2.4.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.0", features = ["filter", "timeout"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
ts-rs = { version = "8.0.0" }
url = "2.5.0"
