[package]
name = "ccc-handlers"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ccc-proxy = { path = "../ccc-proxy" }
ccc-types = { path = "../ccc-types" }
axum = "0.7.5"
axum-macros = "0.4.1"
http = "1.1.0"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = { version = "1.0.58" }
tracing = "0.1.40"
serde_urlencoded = "0.7.1"
phf = { version = "0.11.2", features = ["macros"] }
