[package]
name = "ccc-handlers"
version = "0.1.0"
edition = "2021"
publish = false
rust-version.workspace = true

[dependencies]
ccc-proxy = { workspace = true }
ccc-types = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_urlencoded = { workspace = true }
phf = { workspace = true }
chrono = { workspace = true }
