[package]
name = "ccc-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.3", features = ["derive"] }
ccc-types = { path = "../ccc-types" }
ccc-routes = { path = "../ccc-routes" }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["filter", "timeout"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
