[package]
name = "ccc-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
ccc-types = { workspace = true }
ccc-routes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
