[package]
name = "ccc-upstream-handlers"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ccc-upstream-proxy = { workspace = true }
ccc-types = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_urlencoded = { workspace = true }
phf = { workspace = true }
chrono = { workspace = true }
