[package]
name = "ccc-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = ["rt", "macros"] }
