[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "End-to-end tests for the project"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
similar = { workspace = true }
serde_json = { workspace = true }
