[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end tests for the project"
publish = false
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
similar = { workspace = true }
serde_json = { workspace = true }
