[package]
name = "handlers"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
axum = "0.5.13"
axum-macros = "0.2.3"
http = "0.2.8"
types = { path = "../types" }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
thiserror = { version = "1.0.31" }
tracing = "0.1.35"
serde_urlencoded = "0.7.1"
phf = { version = "0.11.1", features = ["macros"] }
